--- a/src/App.css
+++ b/src/App.css
@@ -1,88 +1,61 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background: linear-gradient(40deg,#857e99,#94e2f6c7,#56587a);
-  background-size: 180% 180%;
-  animation: gradient-animation 27s ease infinite;
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: white;
-}
-.div1{
-  width: 50%;
-}
-.div1 img{
-  width: 100px;
-}
-.div2{
+body {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50%;
-  height: 100vh;
-  /* background-color: #c9f99b; */
+  min-height: 100vh;
+  background: linear-gradient(135deg, #3498db 25%, #e74c3c 75%);
+  background-size: 400% 400%;
+  animation: gradientAnimation 10s infinite;
+  overflow: hidden;
 }
 
-@keyframes gradient-animation {
+h1 {
+  color: #fff;
+  text-align: center;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.button {
+  padding: 10px 20px;
+  margin: 10px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #2ecc71;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  animation: buttonAnimation 2s infinite alternate;
+}
+
+.button:hover {
+  background-color: #27ae60;
+  transform: scale(1.1);
+}
+
+@keyframes gradientAnimation {
   0% {
-    background-position: 0% 80%;
-  }
-  50% {
-    background-position: 100% 50%;
+      background-position: 0% 50%;
   }
   100% {
-    background-position: 0% 100%;
+      background-position: 100% 50%;
   }
 }
-.custom-button {
-  background-image: linear-gradient(to right, #3c7c7e 0%, #85D8CE  51%, #b43c98  100%);
-  margin: 10px;
-  padding: 15px 45px;
-  text-align: center;
-  text-transform: uppercase;
-  transition: 0.5s;
-  background-size: 200% auto;
-  color: white;            
-  box-shadow: 0 0 20px #eee;
-  border-radius: 10px;
-  display: block;
-}
 
-.custom-button:hover {
-  background-position: right center; /* change the direction of the change here */
-  color: #fff;
-  text-decoration: none;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes buttonAnimation {
+  0% {
+      transform: translateY(0);
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+      transform: translateY(-10px);
   }
 }
-         
-
